feat: configure H2 database and JPA settings in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=formula1-demo
+# H2 Configuration
+spring.datasource.url=jdbc:h2:mem:formula1db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Defer datasource initialization until after Hibernate schema creation
+spring.jpa.defer-datasource-initialization=true
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JPA/Hibernate
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
