feat: add API security token secret to application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=formula1-demo
+
+api.security.token.secret=my-secret-key
+
+
 # H2 Configuration
 spring.datasource.url=jdbc:h2:mem:formula1db
 spring.datasource.driverClassName=org.h2.Driver
