feat: added security DEBUG

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.h2.console.path=/h2-console
 # JPA/Hibernate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+
+logging.level.org.springframework.security=DEBUG
